--- a/client/src/pages/DetailPage/Detail.module.css
+++ b/client/src/pages/DetailPage/Detail.module.css
@@ -3,11 +3,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh;
+    height: 150vh;
 }
 
 .allstats{
-    width: fit-content;
+    width: 30%;
     margin: auto;
     height: fit-content;
     max-width: 50%;
@@ -21,4 +21,10 @@
     box-shadow: 10px 10px 20px rgba(184, 179, 179, 0.788);
     opacity: 80%;
     
+}
+
+.img{
+    max-width: 200px;
+    height: 100%;
+    border-radius: 40%;
 }
