--- a/client/src/components/Pagination/Pagination.module.css
+++ b/client/src/components/Pagination/Pagination.module.css
@@ -28,8 +28,8 @@
     text-align: center;
     line-height: 30px;
     text-decoration: none;
-    color: #333;
-    background-color: #fff;
+    color: #e9e0e0;
+    background-color: #000000;
   }
   
   .number a:hover {
