--- a/client/src/pages/FormPage/Form.module.css
+++ b/client/src/pages/FormPage/Form.module.css
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh;
+    height: 150vh;
 }
 
 form {
@@ -13,9 +13,9 @@ form {
     align-items: center;
     padding: 20px;
     border-radius: 8px;
-    background-color: #f0f0f0;
+    background-color: #8f884bc0;
     width: 430px;
-    height: 600px;
+    height: 800px;
     margin: auto;
 }
 
@@ -24,10 +24,12 @@ label {
 }
 
 input, select {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     border-radius: 4px;
-    border: 1px solid #ccc;
+    border: 1px solid #fffbfb;
+    color:aliceblue;
+    background-color: #5ac0a8b7;  
 }
 
 buttonForm {
@@ -35,16 +37,18 @@ buttonForm {
     padding: 10px 20px;
     border-radius: 4px;
     border: none;
-    background-color: #007b5e;
-    color: white;
+    background-color: #6cc0ac;
     cursor: pointer;
 }
 
-buttonForm:hover {
-    background-color: #2a9d8f;
-}
 
 .img{
     width: 300px;
     border-radius: 50%;
+}
+
+
+
+.error{
+    color: red;
 }
