--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -7,13 +7,14 @@
     border-radius: 10px;
     background-color: rgb(237, 245, 191);
     box-shadow: 10px 10px 20px rgba(12, 9, 9, 0.788);
+    color: black;
 }
 
 .search{
     border-radius:10px;
     font-style: oblique;
     width: 80px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     background-color: rgb(101, 101, 104);
     box-shadow: 10px 10px 20px rgba(12, 9, 9, 0.788);
 }
