--- a/client/src/pages/DetailPage/Detail.module.css
+++ b/client/src/pages/DetailPage/Detail.module.css
@@ -28,3 +28,19 @@
     height: 100%;
     border-radius: 40%;
 }
+
+.activities{
+    width: 30%;
+    margin: auto;
+    height: fit-content;
+    max-width: 50%;
+    border: 1px solid rgb(0, 0, 0);
+    justify-content: center;
+    text-align:center;
+    font-style: oblique;
+    text-shadow: 10px 2px 2px rgba(32, 29, 29, 0.288) ;
+    background-color: azure;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px rgba(184, 179, 179, 0.788);
+    opacity: 80%;
+}
